--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="jumbotron">
 	<div class="container">
 		<h1>欢迎来到这里！</h1>
-		<p>这是一个超大的空间。</p>
+		<p>这是一个超大的空间。这个空间的主人是liujun。系统正在开发中，请耐心等待！</p>
 		<p><a class="btn btn-primary btn-lg" role="button" href="1.html">
 			了解更多</a>
 		</p>
